tests/ui/const-generics/mgca/type_const-mismatched-types.stderr
error: the literal is not of type `u32`
  --> $DIR/type_const-mismatched-types.rs:4:24
   |
LL | type const FREE: u32 = 5_usize;
   |                        ^^^^^^^ expected `u32`, found `usize`

error: the literal is not of type `usize`
  --> $DIR/type_const-mismatched-types.rs:14:27
   |
LL |     type const N: usize = false;
   |                           ^^^^^ expected `usize`, found `bool`

error: aborting due to 2 previous errors

